--- a/requirements.txt
+++ b/requirements.txt
@@ -16,8 +16,9 @@ idna==3.10
 jwt==1.3.1
 Mako==1.3.6
 MarkupSafe==3.0.2
+packaging==24.1
 passlib==1.7.4
-psycopg2==2.9.10
+pipdeptree==2.23.4
 pyasn1==0.6.1
 pycparser==2.22
 pydantic==2.9.2
