--- a/requirements.txt
+++ b/requirements.txt
@@ -19,6 +19,8 @@ MarkupSafe==3.0.2
 packaging==24.1
 passlib==1.7.4
 pipdeptree==2.23.4
+psycopg2==2.9.10
+psycopg2-binary==2.9.10
 pyasn1==0.6.1
 pycparser==2.22
 pydantic==2.9.2
@@ -38,5 +40,3 @@ uvicorn==0.32.0
 uvloop==0.21.0
 watchfiles==0.24.0
 websockets==13.1
-psycopg2==2.9.10
-
